# api-blog

./: README.md  env.template  pyproject.toml
api/v1/: __init__.py  auth.py  blog.py  db.py  schema.sql
api/v1/templates/: base.html
api/v1/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
