[tool.poetry]
name = "api-blog"
version = "0.1.0"
description = ""
authors = ["Esperanza Duenas <esperanzaduenas007@gmail.com>"]
readme = "README.md"
packages = [{include = "api_blog"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
pytest = "^7.4.0"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api_blog"]